# security-project

./: .gitignore  CMakeLists.txt  caesar.cpp  casmurro.txt  config.h  config.h.in  frase.txt  main.cpp  security.h  seguranca.h  texto_cifrado.txt
include/: config.h  security.h
input/: frase.txt  vigenereKey.txt
output/: fraseCifrada.txt  fraseDecifrada.txt  fraseRailFenceEVigenere.txt  fraseVigenere.txt  textoDecifrado.txt
seguranca/: hashCalculator.py  keyfile.key  keyfile.pub  lorem.txt  lorem_crypt.enc  plotGraph.py  times.txt
src/: main.cpp  vigenere_and_rail.cpp
