cmake_minimum_required(VERSION 3.0)
project(SEGURANCA)
set(PROJECT_DIR ${PROJECT_SOURCE_DIR})
set(OUTPUT_DIR ${PROJECT_DIR}/output)
set(INPUT_DIR ${PROJECT_DIR}/input)
configure_file(${PROJECT_DIR}/config.h.in ${PROJECT_DIR}/config.h)
add_executable(seguranca main.cpp)
add_executable (caesar caesar.cpp)
add_executable (vigenere_rail vigenere_and_rail.cpp)