cmake_minimum_required(VERSION 3.0)
project(SEGURANCA)
set(PROJECT_DIR ${PROJECT_SOURCE_DIR})
set(OUTPUT_DIR ${PROJECT_DIR}/output)
set(INPUT_DIR ${PROJECT_DIR}/input)
include_directories(include)
configure_file(${PROJECT_DIR}/config.h.in ${PROJECT_DIR}/include/config.h)
file(GLOB source_files src/*.cpp)
add_executable(seguranca src/main.cpp)
add_executable (caesar src/caesar.cpp)
add_executable (vigenere_rail src/vigenere_and_rail.cpp)